--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <div class="chat-window">
     <div class="message">Hi! This looks like WhatsApp 👋</div>
     <div class="message from-me">Hey there! 👨‍💻</div>
-    <img src="images/your-image.jpg" width="200" />
+    <img src="images/your-image.png" width="200" />
   </div>
 
   <form id="message-form" class="message-form">
